# sproxy

./: .gitignore  .travis.yml  ChangeLog.md  Cookies.hs  HTTP.hs  LICENSE  Permissions.hs  README.markdown  README.md  datafile.example.yml  datafile.yml.example  default.nix  example.config  migration.sql  module.nix  module.nix.example  release.nix  sproxy.cabal  sproxy.example.yml  sproxy.hs  sproxy.nix  sproxy.sql  sproxy.yml.example  sproxy2.cabal  stack.yaml
config/: auth_token_key.example  server.crt.example  server.key.example  sproxy.yml.example
driver/: Authorize.hs  Main.hs
example/: app.hs  app.py  privileges.sql
src/: Authenticate.hs  Authorize.hs  ConfigFile.hs  Cookies.hs  HTTP.hs  Log.hs  Logging.hs  Main.hs  Proxy.hs  Type.hs  Util.hs
src/Authenticate/: Google.hs  LinkedIn.hs  Token.hs  Types.hs
src/Network/HTTP/: SProxy.hs
src/Sproxy/: Application.hs  Config.hs  Logging.hs  Server.hs
src/Sproxy/Application/: Access.hs  Cookie.hs  OAuth2.hs  State.hs
src/Sproxy/Application/OAuth2/: Common.hs  Google.hs  LinkedIn.hs  Yandex.hs
src/Sproxy/Server/: DB.hs
src/Sproxy/Server/DB/: DataFile.hs
test/: ConfigFileSpec.hs  CookiesSpec.hs  ProxySpec.hs  UtilSpec.hs
