name:                sproxy
version:             0.8.0
-- synopsis:
-- description:
license:             MIT
license-file:        LICENSE
copyright:           Zalora South East Asia Pte. Ltd
author:              Chris Forno
maintainer:          jekor@jekor.com
category:            Web
build-type:          Simple
cabal-version:       >=1.10
data-files:          sproxy.sql

library
  hs-source-dirs:      src

  exposed-modules:
                       Network.HTTP.SProxy
  other-modules:
                       Authenticate
                       Authorize
                       Cookies
                       HTTP
                       Logging
                       Proxy
                       Type
                       Util
                       ConfigFile
  build-depends:       aeson >= 0.7.0.4,
                       attoparsec,
                       base == 4.*,
                       bytestring,
                       containers >= 0.5,
                       crypto-random,
                       http-conduit,
                       data-default,
                       http-types >= 0.8.5,
                       interpolatedstring-perl6,
                       network,
                       postgresql-simple,
                       SHA,
                       split,
                       string-conversions,
                       time,
                       -- The openssl library is not thread safe, at
                       -- least not the way that HsOpenSSL uses it in
                       -- my testing (segfaults), so I'm using the
                       -- Haskell-native tls library instead.
                       tls >= 1.2,
                       unix,
                       utf8-string,
                       x509,
                       http-kit >= 0.5,
                       resource-pool,
                       yaml >= 0.8,
                       logging-facade,
                       logsink
  default-language:    Haskell2010
  ghc-options:         -Wall -threaded -O2

executable sproxy
  main-is:             Main.hs
  hs-source-dirs:      driver
  build-depends:       base == 4.*,
                       optparse-applicative,

                       sproxy
  default-language:    Haskell2010

test-suite spec
  type:                exitcode-stdio-1.0
  ghc-options:         -Wall
  hs-source-dirs:      src, test
  main-is:             Spec.hs
  build-depends:       aeson,
                       attoparsec,
                       base == 4.*,
                       bytestring,
                       containers >= 0.5,
                       crypto-random,
                       http-conduit,
                       data-default,
                       http-types,
                       interpolatedstring-perl6,
                       network,
                       postgresql-simple,
                       SHA,
                       split,
                       string-conversions,
                       time,
                       tls >= 1.2,
                       unix,
                       utf8-string,
                       x509,
                       http-kit,
                       resource-pool,
                       yaml >= 0.8,
                       logging-facade,
                       logsink,

                       hspec == 2.*,
                       wai >= 3.0.0.2,
                       warp >= 3.0.0.3,
                       connection
  default-language:    Haskell2010
