name: sproxy
version: 0.9.7.1
synopsis: HTTP proxy for authenticating users via OAuth2
license: MIT
license-file: LICENSE
copyright: 2013-2016, Zalora South East Asia Pte. Ltd
author: Chris Forno <jekor@jekor.com>
      , Igor Pashev <pashev.igor@gmail.com>
maintainer: Igor Pashev <pashev.igor@gmail.com>
category: Web
build-type: Simple
extra-source-files: README.md ChangeLog.md config/sproxy.yml.example
cabal-version: >=1.10
data-files: sproxy.sql

source-repository head
  type: git
  location: https://github.com/zalora/sproxy.git

executable sproxy
  main-is: Main.hs
  other-modules:
    Authenticate
    Authenticate.Google
    Authenticate.LinkedIn
    Authenticate.Token
    Authenticate.Types
    Authorize
    ConfigFile
    Cookies
    HTTP
    Logging
    Proxy
    Type
    Util

  hs-source-dirs: src
  default-language: Haskell2010
  ghc-options: -Wall -static
  build-depends:
      base >= 4.8 && < 5
    , SHA
    , aeson >= 0.7.0.4
    , attoparsec
    , base64-bytestring
    , bytestring
    , containers >= 0.5
    , data-default
    , docopt >= 0.7
    , entropy
    , http-conduit >= 2.1.8
    , http-kit >= 0.5
    , http-types >= 0.8.5
    , interpolatedstring-perl6
    , network
    , postgresql-simple
    , raw-strings-qq >= 1.1
    , resource-pool
    , split
    , string-conversions
    , text
    , time
    , tls >= 1.3.3
    , unix
    , utf8-string
    , x509
    , yaml >= 0.8

